<resources>
    <string name="app_name">My Awesome Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="highscore_0">HighScore: 0</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="countdown">00:30</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="confirm">Confirm</string>
</resources>